# toggl-timesheet

./: README.md  pyproject.toml
toggl_timesheet/: log.py
toggl_timesheet/entrypoints/: data_preparation.py  get_raw_data.py  transform.py
