[tool.poetry]
name = "toggl-timesheet"
version = "0.1.0"
description = ""
authors = ["Vadim Filatov <filatovw.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
polars = "^0.20.18"
mypy = "^1.9.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
pytest-coverage = "^0.0"
ruff = "^0.3.5"
black = "^24.3.0"


[tool.poetry.group.dev.dependencies]
memory-profiler = "^0.61.0"
pyspy = "^0.1.1"
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
